fix word wrapping and border radius on code

--- a/docs/styles/preformatted.css
+++ b/docs/styles/preformatted.css
@@ -4,12 +4,13 @@ pre {
     padding: 0.5em;
     border-radius: 0.5rem;
     font-family: "Tamzen12", Courier, monospace;
+    text-wrap: wrap;
 }
 
 code {
     background-color: black;
     color: white;
     padding: 0.5em;
-    border-radius: 0;
+    border-radius: 0.5rem;
     font-family: "Tamzen12", Courier, monospace;
 }
